add tenant scoped user management
